[package]
name = "clarify-link-httpd"
version = "0.1.0"
authors = ["Martin Bley <dev@mb-oss.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve" , "handlebars_templates", "tera_templates"]
